--- a/styles/style.css
+++ b/styles/style.css
@@ -32,10 +32,52 @@
     background-color: tomato;
 }
 
-
 /*Hogy a böngészőben pointer legyen a kurzor a file tallózásakor is*/
 
-input[type=file],
-input[type=file]::-webkit-file-upload-button {
+input[type="file"],
+input[type="file"]::-webkit-file-upload-button {
     cursor: pointer;
 }
+
+/*MODAL TEST CSS PROPERTIES by Mate */
+.modal-new {
+    width: 30%;
+    height: 30%;
+    position: absolute;
+    display: flex;
+    border: solid 1px black;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    display: none;
+}
+.modal-box {
+    width: 90%;
+    height: 90%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+#modal-table {
+    text-align: right;
+    font-size: 25px;
+}
+
+#modal-input {
+    width: 100%;
+    font-size: 25px;
+}
+#modal-btn {
+    align-self: center;
+    margin-top: 50px;
+    font-size: 30px;
+}
+.modalCancel {
+    font-size: 20px;
+    background: red;
+    color: white;
+    margin-top: 10px;
+}
+/*MODAL TEST CSS END*/ ;
