--- a/styles/style.css
+++ b/styles/style.css
@@ -41,43 +41,37 @@ input[type="file"]::-webkit-file-upload-button {
 
 /*MODAL TEST CSS PROPERTIES by Mate */
 .modal-new {
-    width: 30%;
-    height: 30%;
-    position: absolute;
     display: flex;
-    border: solid 1px black;
+    border: 2px solid black;
+    border-radius: 15px;
+    width: 400px;
+    height: 400px;
+    padding: 0px;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    text-align: center;
     display: none;
 }
-.modal-box {
-    width: 90%;
-    height: 90%;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-}
-#modal-table {
-    text-align: right;
-    font-size: 25px;
+
+#todoName,
+#todoDescription,
+#todoDeadline {
+    display: block;
+    width: 100%;
+    font-size: 15px;
 }
 
-#modal-input {
-    width: 100%;
-    font-size: 25px;
-}
-#modal-btn {
-    align-self: center;
-    margin-top: 50px;
-    font-size: 30px;
-}
 .modalCancel {
-    font-size: 20px;
+    font-size: 15px;
     background: red;
     color: white;
-    margin-top: 10px;
+    margin-top: 20px;
+    display: block;
+    width: 100%;
+}
+
+#modal-btn {
+    width: 100%;
+    margin-top: 20px;
+    font-size: 20px;
 }
 /*MODAL TEST CSS END*/ ;
