--- a/styles/table.css
+++ b/styles/table.css
@@ -10,6 +10,8 @@
 .headLine {
     color: rgba(150, 150, 150);
     background-color: rgb(15, 15, 15);
+    padding-top: 1vw;
+    padding-bottom: 1vw;
 }
 
 .todoName {
@@ -49,6 +51,12 @@
     cursor: pointer;
     color: black;
     text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa, 0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
+}
+
+.todoDelete:hover {
+    cursor: pointer;
+    color: rgb(255, 37, 37);
+    text-shadow: 0 0 7px red, 0 0 10px red, 0 0 21px red, 0 0 42px pink, 0 0 82px pink, 0 0 92px pink, 0 0 102px pink, 0 0 151px pink;
 }
 
 .row {
