Javítva a js betöltési probléma desktop nézeten

--- a/styles/table.css
+++ b/styles/table.css
@@ -74,3 +74,23 @@
     color: rgba(65, 65, 65);
     background-color: rgba(30, 30, 30);
 }
+
+input[type=checkbox] {
+    display: none;
+}
+
+input[type=checkbox] {
+    background: #999;
+    height: 16px;
+    width: 16px;
+    display: inline-block;
+    padding: 0 0 0 0px;
+}
+
+input[type=checkbox]:checked {
+    background: #0080FF;
+    height: 16px;
+    width: 16px;
+    display: inline-block;
+    padding: 0 0 0 0px;
+}
