add some new function

--- a/styles/main.css
+++ b/styles/main.css
@@ -85,7 +85,7 @@ button {
 }
 
 .newBtn {
-  background-color: rgb(70, 130, 180);
+  background-color: var(--color1);
   border: none;
   color: white;
   font-size: 1.5rem;
